--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ PIL==1.1.7
 -e git+https://github.com/concentricsky/django-cachemodel.git@b1f795ef07eff33ff57cd683fcab0ec968c251df#egg=django_cachemodel-dev
 #django-debug-toolbar==0.9.4
 django-tastypie==0.9.11
+gunicorn==0.14.2
 jingo==0.4
 mimeparse==0.1.3
 psycopg2==2.4.4
